# oak

./: .gitignore  README.md
deprecated/: sort.ml
elf/: Pass.ml  dune  elf.ml  pass.ml
elf/pass/: PassUtil.ml  WarnCodeLen.ml  WarnOverArity.ml  WarnParenDep.ml  WarnRepetitiveCode.ml
elf/passes/: WarnCodeLen.ml  WarnParentheseDepth.ml
elm/: bad-layout-let.elm  debug1.elm  example-no-typ.elm  example.elm  expr-maxshift.elm  expr-nopat.elm  expr-op.elm  expr-pat.elm  expr-pipe.elm  expr.elm  len-func.elm  par-depth.elm  types.elm
elm/decl/: decl-err1.elm  decl-err2.elm  decl-err3.elm  decl-err4.elm  decl-err5.elm  decl-err6.elm  decl-err7.elm
elm/lex/: comment.elm  pat_alias.elm  pat_record_list.elm  port.elm  record.elm  unary.elm
elm/moddep/: imp1-err.elm  imp2-err.elm  imp3-err.elm  imp4-err.elm
experimental/modular_ast/: AstModular.ml  SyntaxModular.ml
experimental/polymorphic_ast/: Ast.ml  Syntax.ml
oak/: argv.ml  dune  oak.ml
oaklib/: Argv.ml  Argv.mli  Driver.ml  ElmCore.ml  ElmLex.mll  ElmParse.mly  Lex.ml  Lex.mli  OTarget.ml  Parse.ml  Pass.ml  Passman.ml  Passman.mli  Src.ml  Tokens.ml  Util.ml  dune  pass.ml  src.ml
oaklib/ast/: ElAst.ml  ElAstLexical.ml  ElAstRenamed.ml  ElAstResolved.ml
oaklib/pass/: PhaseLexical.ml  PhaseModuleDependency.ml  PhaseRename.ml  PhaseResolveSymbols.ml  PhaseTypecheck.ml
src/: ElAst.ml  ElmParse.mly  Tokens.ml  Util.ml  dune  elmp.ml  lex.ml  parse.ml  pass.ml
src/ast/: ElAstResolved.ml
src/pass/: PhaseResolveSymbols.ml  WarnParentheseDepth.ml
util/: Format.ml  Graph.ml  Graph.mli  Map.ml  Monoid.ml  Never.ml  Never.mli  PassResult.ml  dune
