(ocamllex ElmLex)

 (menhir
   (modules ElmParse)
   (infer false)
   (flags -la 2 
          --table 
          ; --trace 
          --external-tokens Tokens))

(library
 (name oaklib)
 ; (flags :standard -rectypes)
 (libraries menhirLib core))

(include_subdirs unqualified)

(env
  (_ 
    (flags (:standard -warn-error -A))))