(ocamllex ElmLex)

 (menhir
   (modules ElmParse)
   (infer false)
   (flags -la 2 
          --table 
          ; --trace 
          --external-tokens Tokens))

(library
 (name oaklib)
 ; (flags :standard -rectypes)
 (libraries menhirLib core util)
 (preprocess (pps ppx_sexp_conv ppx_compare))
 )

(include_subdirs unqualified)

(env
  (_ 
    (flags (:standard -warn-error -A))))