(ocamllex ElmLex)

 (menhir
   (modules ElmParse)
   (infer false)
   (flags -la 2 
          --table 
          ; --trace 
          --external-tokens Tokens))

(library
 (name oaklib)
 ; (flags :standard -rectypes)
 (libraries 
  menhirLib ; Parsing 
  core ; Stdlib replacement
  core_unix core_unix.filename_unix ; Unix manipulation
  camlp-streams ;Streams
  util ; Utils we built
  )
 (preprocess (pps ppx_sexp_conv ppx_compare))
 )

(include_subdirs unqualified)

(env
  (_ 
    (flags (:standard -warn-error -A))))